<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" 
    android:layout_height="match_parent">

    <!--购物车-->
    <RelativeLayout
        android:id="@+id/shopping_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_tool_hight"
        android:background="@drawable/item_click_selector"
        android:paddingLeft="@dimen/mine_h_magin"
        android:paddingRight="@dimen/mine_h_magin"
        android:layout_marginBottom="@dimen/mine_tool_itrm_bottom">
        
        <TextView
            android:id="@+id/my_shopping"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" 
            android:text="@string/mine_shopping"
            android:drawableLeft="@drawable/ic_shopping"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/mine_tool_item_padding"/>
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_rightjiantou"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <!--钱包-->
    <RelativeLayout
        android:id="@+id/wallet_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_tool_hight"
        android:layout_below="@id/shopping_layout"
        android:background="@drawable/item_click_selector"
        android:paddingLeft="@dimen/mine_h_magin"
        android:paddingRight="@dimen/mine_h_magin"
        android:layout_marginBottom="@dimen/mine_tool_itrm_bottom">

        <TextView
            android:id="@+id/my_wallet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mine_wallet"
            android:drawableLeft="@drawable/ic_wallet"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/mine_tool_item_padding"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_rightjiantou"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <!--优惠券-->
    <RelativeLayout
        android:id="@+id/coupons_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_tool_hight"
        android:layout_below="@id/wallet_layout"
        android:background="@drawable/item_click_selector"
        android:paddingLeft="@dimen/mine_h_magin"
        android:paddingRight="@dimen/mine_h_magin">

        <TextView
            android:id="@+id/my_coupons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mine_conpous"
            android:drawableLeft="@drawable/ic_coupons"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/mine_tool_item_padding"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_rightjiantou"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <!--我喜欢的-->
    <RelativeLayout
        android:id="@+id/like_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_tool_hight"
        android:layout_below="@id/coupons_layout"
        android:layout_marginTop="@dimen/mine_h_magin"
        android:background="@drawable/item_click_selector"
        android:paddingLeft="@dimen/mine_h_magin"
        android:paddingRight="@dimen/mine_h_magin"
        android:layout_marginBottom="@dimen/mine_tool_itrm_bottom">

        <TextView
            android:id="@+id/my_like"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mine_like"
            android:drawableLeft="@drawable/ic_collection"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/mine_tool_item_padding"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_rightjiantou"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <!--免流量服务-->
    <RelativeLayout
        android:id="@+id/trafficpackage_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_tool_hight"
        android:layout_below="@id/like_layout"
        android:background="@drawable/item_click_selector"
        android:paddingLeft="@dimen/mine_h_magin"
        android:paddingRight="@dimen/mine_h_magin">

        <TextView
            android:id="@+id/my_trafficpackage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mine_trafficpackage"
            android:drawableLeft="@drawable/ic_trafficpackage"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/mine_tool_item_padding"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_rightjiantou"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <!--更多-->
    <RelativeLayout
        android:id="@+id/more_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_tool_hight"
        android:layout_below="@id/trafficpackage_layout"
        android:layout_marginTop="@dimen/mine_h_magin"
        android:background="@drawable/item_click_selector"
        android:paddingLeft="@dimen/mine_h_magin"
        android:paddingRight="@dimen/mine_h_magin"
        android:layout_marginBottom="@dimen/mine_tool_itrm_bottom">

        <TextView
            android:id="@+id/my_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mine_more"
            android:drawableLeft="@drawable/ic_more"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/mine_tool_item_padding"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_rightjiantou"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <!--帮助与反馈-->
    <RelativeLayout
        android:id="@+id/feedback_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_tool_hight"
        android:layout_below="@id/more_layout"
        android:background="@drawable/item_click_selector"
        android:paddingLeft="@dimen/mine_h_magin"
        android:paddingRight="@dimen/mine_h_magin"
        android:layout_marginBottom="@dimen/mine_tool_itrm_bottom">

        <TextView
            android:id="@+id/my_feedback"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mine_feedback"
            android:drawableLeft="@drawable/ic_feedback"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/mine_tool_item_padding"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_rightjiantou"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <!--设置-->
    <RelativeLayout
        android:id="@+id/setting_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_tool_hight"
        android:layout_below="@id/feedback_layout"
        android:background="@drawable/item_click_selector"
        android:paddingLeft="@dimen/mine_h_magin"
        android:paddingRight="@dimen/mine_h_magin"
        android:layout_marginBottom="@dimen/mine_bottom_magin">

        <TextView
            android:id="@+id/my_setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mine_setting"
            android:drawableLeft="@drawable/ic_setting"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/mine_tool_item_padding"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_rightjiantou"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</RelativeLayout>